--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
             <div class="preview" id="preview"> <img src="./img/color.jpg" alt="imagen color game"></div>
         </a>
         <a href="https://plataformadisco-clemente.onrender.com/login.html" class="button" target="_blank">
-            <img class="ico"
-                src="https://plataformadisco-clemente.onrender.com/icon_88938c95d8885e7c059c7b7be447af34.ico"
-                alt="logo plataforma-disco">Plataforma Disco
+            <img class="ico" src="./img/plataformaDisco.ico" alt="logo plataforma-disco">Plataforma Disco
             <div class="preview" id="preview"> <img src="./img/plataforma-disco.jpg" alt="imagen plataforma-disco"> </div>
         </a>
         <a href="https://agustin-clemente.github.io/ProyectoTalentoTech/" class="button" target="_blank">
@@ -103,6 +101,90 @@
             <img class="ico" src="./img/pokedex.ico" alt="logo pokedex">Pokédex
             <div class="preview" id="preview">
                 <img src="./img/pokedex.jpg" alt="imagen pokedex">
+            </div>
+        </a>
+        <a href="https://generador-de-informe-abm-titulares.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/informe-titulares.ico" alt="logo generador de informe ABM - TITULARES">Generador de informe ABM - TITULARES
+            <div class="preview" id="preview">
+                <img src="./img/informeTitulares.jpg" alt="imagen generador de informe ABM - TITULARES">
+            </div>
+        </a>
+        <a href="https://saludonavidad.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/navidad.ico" alt="logo tarjeta navideña">Tarjeta navideña
+            <div class="preview" id="preview">
+                <img src="./img/navidad.jpg" alt="imagen tarjeta navideña">
+            </div>
+        </a>
+        <a href="https://grupostp.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/gruposTP.ico" alt="logo grupos para TP">Grupos para TP
+            <div class="preview" id="preview">
+                <img src="./img/gruposTP.jpg" alt="imagen grupos para TP">
+            </div>
+        </a>
+        <a href="https://cuadro-coccidios.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/cuadroCoccidios.ico" alt="logo cuadro coccidios">Cuadro coccidios
+            <div class="preview" id="preview">
+                <img src="./img/cuadroCoccidios.jpg" alt="imagen cuadro coccidios">
+            </div>
+        </a>
+        <a href="https://metricas-corporales.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/metricasCorporales.ico" alt="logo métricas corporales">Métricas corporales
+            <div class="preview" id="preview">
+                <img src="./img/metricasCorporales.jpg" alt="imagen métricas corporales">
+            </div>
+        </a>
+        <a href="https://informeabm.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/informeABM.ico" alt="logo informe ABM">Informe ABM
+            <div class="preview" id="preview">
+                <img src="./img/informeABM.jpg" alt="imagen informe ABM">
+            </div>
+        </a>
+        <a href="https://clase2parasitologia.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/clase2Parasitologia.ico" alt="logo clase 2 parasitologia">Clase 2 Parasitologia
+            <div class="preview" id="preview">
+                <img src="./img/clase2Parasitologia.jpg" alt="imagen clase 2 parasitologia">
+            </div>
+        </a>
+        <a href="https://clase1parasitologia.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/clase1Parasitologia.ico" alt="logo clase 1 parasitologia">Clase 1 Parasitologia
+            <div class="preview" id="preview">
+                <img src="./img/clase1Parasitologia.jpg" alt="imagen clase 1 parasitologia">
+            </div>
+        </a>
+        <a href="https://e-commercetalentotech.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/formality.ico" alt="logo formalidad">Formality
+            <div class="preview" id="preview">
+                <img src="./img/formality.jpg" alt="imagen formalidad">
+            </div>
+        </a>
+        <a href="https://clemente-agustin-ciclo-coccidios.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="./img/cicloCoccidios.ico" alt="logo ciclo coccidios">Ciclo coccidios
+            <div class="preview" id="preview">
+                <img src="./img/cicloCoccidios.jpg" alt="imagen ciclo coccidios">
+            </div>
+        </a>
+        <a href="https://clemente-agustin-choiceeptas.netlify.app/" class="button" target="_blank">
+            <img class="ico" src="https://clemente-agustin-choiceeptas.netlify.app/assets/android-chrome-512x512-BmgqSuYQ.png" alt="logo choice eptas">Choice EPTAS
+            <div class="preview" id="preview">
+                <img src="./img/choiceEPTAS.jpg" alt="imagen choice eptas">
+            </div>
+        </a>
+        <a href="https://agustin-clemente.github.io/cicloTaeniidae/" class="button" target="_blank">
+            <img class="ico" src="./img/cicloTaeniidae.ico" alt="logo ciclo taeniidae">Ciclo Taeniidae
+            <div class="preview" id="preview">
+                <img src="./img/cicloTaeniidae.jpg" alt="imagen ciclo taeniidae">
+            </div>
+        </a>
+        <a href="https://agustin-clemente.github.io/TaeniidaeWeb/" class="button" target="_blank">
+            <img class="ico" src="./img/taeniidae.ico" alt="logo taeniidae">Taeniidae
+            <div class="preview" id="preview">
+                <img src="./img/taeniidae.jpg" alt="imagen taeniidae">
+            </div>
+        </a>
+        <a href="https://agustin-clemente.github.io/miPlanNutricionalFrontend/" class="button" target="_blank">
+            <img class="ico" src="./img/miPlanNutricional.ico" alt="logo mi plan nutricional">Mi plan nutricional
+            <div class="preview" id="preview">
+                <img src="./img/miPlanNutricional.jpg" alt="imagen mi plan nutricional">
             </div>
         </a>
     </div>
